--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@simonwep/pickr": "^1.8.2",
     "@types/ua-parser-js": "^0.7.36",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
